[gd_scene load_steps=18 format=3 uid="uid://dlnv5bicqv8ih"]

[ext_resource type="Script" path="res://src/scripts/ui/pages/main_menu.gd" id="1_1pq65"]
[ext_resource type="PackedScene" uid="uid://danbn6jjfghru" path="res://src/scenes/ui/components/fade_rect.tscn" id="2_62p08"]
[ext_resource type="Material" uid="uid://dhow08hwfh3bs" path="res://src/resources/assets/blur_material.tres" id="2_tqvrg"]
[ext_resource type="Texture2D" uid="uid://cyd74v1etxj2a" path="res://src/resources/assets/ui/play.svg" id="3_1vqd7"]
[ext_resource type="Texture2D" uid="uid://ch55iben1ff3x" path="res://assets/icon.png" id="3_40fbx"]
[ext_resource type="PackedScene" uid="uid://bs7s2yo0kutpx" path="res://src/scenes/ui/components/safe_margins.tscn" id="3_o4qee"]
[ext_resource type="Texture2D" uid="uid://dbpyib0osxmuy" path="res://src/resources/assets/ui/gear.svg" id="4_b7mlp"]
[ext_resource type="Texture2D" uid="uid://b13sa65um5jk" path="res://src/resources/assets/ui/folder_icon.svg" id="5_atquh"]
[ext_resource type="StyleBox" uid="uid://cl6rmska40ctf" path="res://src/resources/styles/menu/button_normal.tres" id="6_ukj2h"]
[ext_resource type="Texture2D" uid="uid://cu648p40sig4d" path="res://src/resources/assets/ui/theme_icons/times.svg" id="6_w7hdg"]
[ext_resource type="StyleBox" uid="uid://cdxc1844wwir1" path="res://src/resources/styles/menu/button_hover.tres" id="7_ivhu7"]
[ext_resource type="Texture2D" uid="uid://bydji1mi7n4od" path="res://src/resources/assets/ui/about.svg" id="7_pbghq"]
[ext_resource type="StyleBox" uid="uid://b3ldjeejkehoq" path="res://src/resources/styles/menu/button_pressed.tres" id="8_ck0rn"]
[ext_resource type="Texture2D" uid="uid://cfi8aldqbl7k7" path="res://src/resources/assets/wood_paneling.jpg" id="10_aypmd"]

[sub_resource type="FontVariation" id="FontVariation_i5m8w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0iom8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oytix"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1pq65")
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_aypmd")
expand_mode = 1
stretch_mode = 6

[node name="Control" type="ColorRect" parent="."]
material = ExtResource("2_tqvrg")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="SafeMargins" parent="." instance=ExtResource("3_o4qee")]
layout_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="SafeMargins"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SafeMargins/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SafeMargins/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="SafeMargins/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="SafeMargins/MarginContainer/VBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="Label" type="Label" parent="SafeMargins/MarginContainer/VBoxContainer/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_i5m8w")
theme_override_font_sizes/font_size = 128
text = "Tabletop Engine"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="SafeMargins/MarginContainer/VBoxContainer/VBoxContainer/PanelContainer/HBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("3_40fbx")
expand_mode = 3

[node name="NewGame" type="Button" parent="SafeMargins/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 164)
layout_mode = 2
theme_override_styles/normal = ExtResource("6_ukj2h")
theme_override_styles/hover = ExtResource("7_ivhu7")
theme_override_styles/pressed = ExtResource("8_ck0rn")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_0iom8")
theme_override_styles/focus = SubResource("StyleBoxEmpty_oytix")
text = "Play"
icon = ExtResource("3_1vqd7")
expand_icon = true

[node name="Tabletops" type="Button" parent="SafeMargins/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 164)
layout_mode = 2
theme_override_styles/normal = ExtResource("6_ukj2h")
theme_override_styles/hover = ExtResource("7_ivhu7")
theme_override_styles/pressed = ExtResource("8_ck0rn")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_0iom8")
theme_override_styles/focus = SubResource("StyleBoxEmpty_oytix")
text = "Board Builder"
icon = ExtResource("5_atquh")
expand_icon = true

[node name="Settings" type="Button" parent="SafeMargins/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 164)
layout_mode = 2
theme_override_styles/normal = ExtResource("6_ukj2h")
theme_override_styles/hover = ExtResource("7_ivhu7")
theme_override_styles/pressed = ExtResource("8_ck0rn")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_0iom8")
theme_override_styles/focus = SubResource("StyleBoxEmpty_oytix")
text = "Settings"
icon = ExtResource("4_b7mlp")
expand_icon = true

[node name="About" type="Button" parent="SafeMargins/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 164)
layout_mode = 2
theme_override_styles/normal = ExtResource("6_ukj2h")
theme_override_styles/hover = ExtResource("7_ivhu7")
theme_override_styles/pressed = ExtResource("8_ck0rn")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_0iom8")
theme_override_styles/focus = SubResource("StyleBoxEmpty_oytix")
text = "About"
icon = ExtResource("7_pbghq")
expand_icon = true

[node name="Quit" type="Button" parent="SafeMargins/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 164)
layout_mode = 2
theme_override_styles/normal = ExtResource("6_ukj2h")
theme_override_styles/hover = ExtResource("7_ivhu7")
theme_override_styles/pressed = ExtResource("8_ck0rn")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_0iom8")
theme_override_styles/focus = SubResource("StyleBoxEmpty_oytix")
text = "Quit"
icon = ExtResource("6_w7hdg")
expand_icon = true

[node name="Label" type="Label" parent="SafeMargins/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 48
text = "Copyright ryanabx 2023"
horizontal_alignment = 1

[node name="FadeRect" parent="." instance=ExtResource("2_62p08")]
layout_mode = 1

[connection signal="pressed" from="SafeMargins/MarginContainer/VBoxContainer/VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="SafeMargins/MarginContainer/VBoxContainer/VBoxContainer/Tabletops" to="." method="_on_tabletops_pressed"]
[connection signal="pressed" from="SafeMargins/MarginContainer/VBoxContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="SafeMargins/MarginContainer/VBoxContainer/VBoxContainer/About" to="." method="_on_about_pressed"]
[connection signal="pressed" from="SafeMargins/MarginContainer/VBoxContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
